# FaceReconstruction-Kinect-3D

./: CMakeLists.txt  README.md  demo.cpp  faceUtils.cpp  faceUtils.h  utils.cpp  utils.h
SFML-2.3.2/doc/: sfml.chm
exe/: faceModel.py
kn/: kinect.ninja.cmake
kn/include/: base.hpp  device.hpp  kface.hpp  kninja.hpp
kn/src/: base.cpp  device.cpp  kface.cpp
register/: FileSystem.cpp  FileSystem.h  main.cpp  parameters.h
